Added default route and got event route working

--- a/config/environment.js.example
+++ b/config/environment.js.example
@@ -14,8 +14,8 @@ module.exports = function(environment) {
     },
 
     APP: {
-      // Here you can pass flags/options to your application instance
-      // when it is created
+      applicationId: 'APP ID HERE',
+      restApiId: 'REST API HERE'
     }
   };
 
