--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "~0.1.18",
     "jquery": "^1.11.1",
-    "loader.js": "ember-cli/loader.js#3.2.0",
+	  "jquery.cookie": "1.4.1",
+	  "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
     "ember-cli-moment-shim": "0.0.3"
   }
