--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
-    "ember-cli-moment-shim": "0.0.3"
+    "ember-cli-moment-shim": "0.0.3",
+    "hammerjs": "runspired/hammer.js#develop",
+    "hammer-time": "0.2.2"
   }
 }
