--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ember-data": "1.13.5",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
+    "ember-gestures": "0.0.6",
     "ember-parse-adapter": "0.5.3"
   },
   "dependencies": {}
