--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,6 @@
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
     "ember-cli-moment-shim": "0.0.3",
-    "hammerjs": "runspired/hammer.js#develop",
-    "hammer-time": "0.2.2"
+    "fastclick": "~1.0.6"
   }
 }
