--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dates": "1.1.3",
     "ember-cli-dependency-checker": "^1.0.0",
+    "ember-cli-fastclick": "^1.0.4",
     "ember-cli-htmlbars": "0.7.9",
     "ember-cli-htmlbars-inline-precompile": "^0.1.1",
     "ember-cli-ic-ajax": "0.2.1",
@@ -39,7 +40,6 @@
     "ember-data": "1.13.5",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
-    "ember-gestures": "0.0.6",
     "ember-parse-adapter": "0.5.3"
   },
   "dependencies": {}
